Fixed video display on smaller devices

--- a/style/home.css
+++ b/style/home.css
@@ -9,15 +9,15 @@ html,body{
     position: absolute;
     top: 50%;
     left: 50%;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     -webkit-transform: translate(-50%, -50%);
     -moz-transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
     -webkit-filter: brightness(50%);
     filter: brightness(50%);
-    object-fit: cover;
+    object-fit: fill;
 }
 
 .promo-overlay{
