--- a/style/queries.css
+++ b/style/queries.css
@@ -8,3 +8,36 @@
         text-align: center;
     }
 }
+
+@media (max-width: 400px) {
+
+    /*Landing Page*/
+    h1.guavah-header-light{
+        word-spacing: 100vw;
+        white-space: normal;
+        text-align: center;
+        font-size: 2.5rem;
+    }
+    .promo-video {
+        object-fit:''
+    }
+
+
+
+}
+
+/*
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 100%;
+    height: 100%;
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    -webkit-filter: brightness(50%);
+    filter: brightness(50%);
+
+*/
